@@ -18,10 +18,14 @@
  */
 package org.quelea.windows.imagegroup;
 
+import java.awt.Graphics2D;
+import java.awt.image.BufferedImage;
 import javafx.scene.control.Label;
+import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.BorderPane;
 import org.quelea.data.imagegroup.ImageGroupSlide;
+import org.quelea.services.utils.QueleaProperties;
 
 /**
  *
@@ -34,15 +38,18 @@ public class SlideThumbnail extends BorderPane {
     private static final String BORDER_STYLE_DESELECTED = "-fx-padding: 0.2em;-fx-border-color: rgb(0,0,0,0);-fx-border-radius: 5;-fx-border-width: 0.1em;";
     private int num;
     private ImageGroupSlide slide;
+    private ImageView image;
     private boolean selected;
     private boolean active;
-
+    
     public SlideThumbnail(ImageGroupSlide slide, int num) {
         this.num = num;
         this.slide = slide;
-        ImageView image = new ImageView(slide.getImage());
-        image.setFitWidth(200);
+        image = new ImageView(slide.getImage());
+        image.setFitWidth(QueleaProperties.get().getThumbnailSize());
         image.setPreserveRatio(true);
+        image.setSmooth(true);
+        image.setCache(true);
         setTop(image);
         setCenter(new Label(Integer.toString(num)));
     }
@@ -54,6 +61,7 @@ public class SlideThumbnail extends BorderPane {
 
     public void setActive(boolean active) {
         this.active=active;
+        image.setFitWidth(QueleaProperties.get().getThumbnailSize());
         recalcBorder();
     }
     
