@@ -22,6 +22,7 @@ quelea (2016.2) stable; urgency=normal
   * Get presentation slide previews through Mobile Remote
   * Add support for displaying websites
   * Add support for displaying groups of images
+  * Added ability to change thumbnail size
 
 
  -- Michael Berry <michael@quelea.org>  Sunday, 26 May 2016 00:00:00 +0000
